--- a/server/htmls/signup.html
+++ b/server/htmls/signup.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="/libs/bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+	<link href="static/libs/bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 	<title>Loginform</title>
 </head>
 
@@ -63,7 +63,7 @@
 											class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Подтвердить</button>
 									</div>
 
-									<p class="text-center text-muted mt-5 mb-0">Уже есть аккаунт? <a href="signin.html"
+									<p class="text-center text-muted mt-5 mb-0">Уже есть аккаунт? <a href="/signin"
 											class="fw-bold text-body"><u>Войти</u></a></p>
 								</form>
 							</div>
