--- a/server/htmls/index.html
+++ b/server/htmls/index.html
@@ -7,201 +7,6 @@
 	<link rel="shortcut icon" type="image/x-icon" href="static/images/ico.ico" />
 	<link href="static/style.css" rel="stylesheet" type="text/css" />
 	<link href="static/libs/bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-	<style type="text/css">
-		#statsInterface {
-			width: 50%;
-			height: auto;
-			position: absolute;
-			top: 20px;
-			margin-left: auto;
-			margin-right: auto;
-			left: 0;
-			right: 0;
-			color: white;
-
-			border-radius: 10px;
-		}
-
-		@keyframes combat {
-			from {
-				box-shadow: 0px 0px 0px 0px rgb(255 58 70);
-			}
-
-			50% {
-				box-shadow: 0px 0px 40px 0px rgb(255 58 70);
-			}
-
-			to {
-				box-shadow: 0px 0px 0px 0px rgb(255 58 70);
-			}
-		}
-
-		.hpbar {
-			width: 100%;
-			height: 35px;
-			border-radius: 10px;
-			text-align: center;
-			display: flex;
-		}
-
-		.bar-value {
-			width: 100%;
-			display: inline-block;
-			padding: 10px 10px 10px 10px;
-		}
-
-		#spells-interface {
-			position: absolute;
-			display: flex;
-			width: 750px;
-			height: 75px;
-			margin-left: auto;
-			margin-right: auto;
-			left: 0;
-			right: 0;
-			bottom: 2%;
-		}
-
-		#cooldown-interface {
-			position: absolute;
-			margin-left: auto;
-			margin-right: auto;
-			left: 0;
-			right: 0;
-			bottom: 20%;
-			width: 20%;
-			height: auto;
-			/*background-color: red;*/
-		}
-
-		.cooldownbar {
-			width: 0%;
-			height: 20px;
-			margin: 10px 0 10px 0;
-			border-radius: 20px;
-			border: 3px solid grey;
-			padding: 0;
-			text-align: center;
-			color: white;
-		}
-
-		#global {
-			background-color: #FF9900;
-			visibility: hidden;
-		}
-
-		#spell {
-			background-color: #006363;
-			visibility: hidden;
-		}
-
-		.spell-button {
-			display: inline-block;
-			background-color: transparent;
-			border: .2px solid gray;
-			border-radius: 15%;
-			width: 70px;
-			height: 70px;
-			margin: 0px 3px 0px 3px;
-			text-align: left;
-			color: white;
-			font-weight: bolder;
-			padding-bottom: 6%;
-		}
-
-		.spell-button:hover {
-			box-shadow: inset 0em 0em 2px black;
-		}
-
-		h1 {
-			display: block;
-			text-align: center;
-			color: #ffe1e1;
-
-		}
-
-		#gameMenu {
-			box-shadow: 0px 0px 10px gray;
-		}
-
-		#longLasting {
-			position: absolute;
-			display: flex;
-			top: 200px;
-			margin: 10px;
-			margin-left: auto;
-			margin-right: auto;
-			left: 0;
-			right: 0;
-			color: white;
-			font-weight: bolder;
-			font-size: 20px;
-			min-width: 1px;
-			max-width: 200px;
-			height: auto;
-		}
-
-		.longLastingSpell {
-			width: 50px;
-			text-align: center;
-
-			height: 50px;
-		}
-
-		.centred-container {
-			position: absolute;
-			z-index: 10;
-			margin: 50px auto auto auto;
-			left: 0;
-			right: 0;
-		}
-
-		#settings {
-			width: 50%;
-			min-height: 50%;
-			background-color: #ffffff;
-			border-radius: 10px;
-			border: 2px solid black;
-			display: none;
-		}
-
-		label {
-			margin: 30px;
-		}
-
-		.custom-checkbox {
-			position: absolute;
-			z-index: -1;
-			opacity: 0;
-		}
-
-		.custom-checkbox+label {
-			display: inline-flex;
-			align-items: center;
-			user-select: none;
-		}
-
-		.custom-checkbox+label::before {
-			content: '';
-			display: inline-block;
-			width: 1em;
-			height: 1em;
-			flex-shrink: 0;
-			flex-grow: 0;
-			border: 1px solid #adb5bd;
-			border-radius: 0.25em;
-			margin-right: 0.5em;
-			background-repeat: no-repeat;
-			background-position: center center;
-			background-size: 50% 50%;
-		}
-
-		.custom-checkbox:checked+label::before {
-			border-color: #0b76ef;
-			background-color: #0b76ef;
-			background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
-		}
-	</style>
 </head>
 
 <body>
@@ -215,6 +20,7 @@
 		</div>
 	</div>
 	<script src="static/libs/jquery-3.6.0.min.js" defer></script>
+	<script src="static/js/service/cookie.js" defer></script>
 	<script type="text/javascript" src="static/js/script.js" defer></script>
 	<script type="text/javascript" src="static/js/Reader.js" defer></script>
 	<script type="text/javascript" src="static/js/Player.js" defer></script>
@@ -233,18 +39,12 @@
 	<div>
 		<div id="fps-counter"></div>
 	</div>
-	<img id="settings-button" src="static/images/settings.png" alt="Settings"
-		style="width: 50px; position: absolute; margin: 10px; right: 0;">
-	<div id="gameMenu">
-		<h1>World Of Shapes</h1>
-		<input id="nickInput" placeholder="Input nickname" maxlength="14">
-		<select id="class-input" name="class-input">
-			<option disabled>Change Class</option>
-			<option value=1>Cirle</option>
-			<option value=2>Triangle</option>
-		</select>
-		<input type="button" id="playBtn" value="Play">
+	<img id="settings-button" src="static/images/settings.png" alt="Settings" style="width: 50px; position: absolute; margin: 10px; right: 0;">
+
+	<div class="buttonn" id="play" onclick="SendPacket('start');" style="display: block; position: absolute; width: 30%; top: 50%;left: 50%;transform: translate(-50%, -50%);">
+		<span>Играть</span>
 	</div>
+
 	<div id="statsInterface" style="display: none;">
 		<div style="background-color: #80808066; border-radius: 10px; display: flex;">
 			<div class="hpbar" id="hp" style="background-color: #0ac70a94;">
@@ -269,6 +69,8 @@
 	</div>
 	<div id="spells-interface" style="display: none"></div>
 	<script type="text/javascript">
+		let characterID = '<% id %>';
+
 		let spells_interface = document.getElementById('spells-interface'),
 			buttons = {};
 		let spellsList = {}, spellsInfo;
