--- a/server/htmls/index.html
+++ b/server/htmls/index.html
@@ -58,7 +58,7 @@
 				<div class="bar-value" style="text-align: right;">100%</div>
 			</div>
 		</div>
-		<div style="width: 100%; color: black; font: 35px 'Fira Sans', sans-serif;">
+		<div style="width: 100%; color: white; font: 35px 'Fira Sans', sans-serif;">
 			<div id="name-bar" style="text-align: center;">
 			</div>
 		</div>
@@ -68,6 +68,11 @@
 		<div class="cooldownbar" id="spell"></div>
 	</div>
 	<div id="spells-interface" style="display: none"></div>
+
+	<div id="xpbar" style="background-color: #80808066; border-radius: 13px; margin-right: auto; margin-left: auto; display: none; position: absolute; bottom: 0.5%; width: 750px; height: 15px; right: 0; left: 0;">
+		<div id="xp" style="background-color: #0ac70a94;border-radius: 13px;">
+		</div>
+	</div>
 	<script type="text/javascript">
 		let characterID = '<% id %>';
 
