--- a/server/htmls/index.html
+++ b/server/htmls/index.html
@@ -39,6 +39,18 @@
 	<div>
 		<div id="fps-counter"></div>
 	</div>
+	<div id="top-interface">
+		<div class="top-value"></div>
+		<div class="top-value"></div>
+		<div class="top-value"></div>
+		<div class="top-value"></div>
+		<div class="top-value"></div>
+		<div class="top-value"></div>
+		<div class="top-value"></div>
+		<div class="top-value"></div>
+		<div class="top-value"></div>
+		<div class="top-value"></div>
+	</div>
 	<img id="settings-button" src="static/images/settings.png" alt="Settings" style="width: 50px; position: absolute; margin: 10px; right: 0;">
 
 	<div class="buttonn" id="play" onclick="SendPacket('start');" style="display: block; position: absolute; width: 30%; top: 50%;left: 50%;transform: translate(-50%, -50%);">
