--- a/server/htmls/index.html
+++ b/server/htmls/index.html
@@ -40,16 +40,56 @@
 		<div id="fps-counter"></div>
 	</div>
 	<div id="top-interface">
-		<div class="top-value"></div>
-		<div class="top-value"></div>
-		<div class="top-value"></div>
-		<div class="top-value"></div>
-		<div class="top-value"></div>
-		<div class="top-value"></div>
-		<div class="top-value"></div>
-		<div class="top-value"></div>
-		<div class="top-value"></div>
-		<div class="top-value"></div>
+		<div class="top-value">
+			<img class="top-img" src="static/images/bonuses/star.png">
+			<div class="text-overlay">
+			</div>
+		</div>
+		<div class="top-value">
+			<img class="top-img" src="static/images/bonuses/star.png">
+			<div class="text-overlay">
+			</div>
+		</div>
+		<div class="top-value">
+			<img class="top-img" src="static/images/bonuses/star.png">
+			<div class="text-overlay">
+			</div>
+		</div>
+		<div class="top-value">
+			<img class="top-img" src="static/images/bonuses/star.png">
+			<div class="text-overlay">
+			</div>
+		</div>
+		<div class="top-value">
+			<img class="top-img" src="static/images/bonuses/star.png">
+			<div class="text-overlay">
+			</div>
+		</div>
+		<div class="top-value">
+			<img class="top-img" src="static/images/bonuses/star.png">
+			<div class="text-overlay">
+			</div>
+		</div>
+		<div class="top-value">
+			<img class="top-img" src="static/images/bonuses/star.png">
+			<div class="text-overlay">
+			</div>
+		</div>
+		<div class="top-value">
+			<img class="top-img" src="static/images/bonuses/star.png">
+			<div class="text-overlay">
+			</div>
+		</div>
+		<div class="top-value">
+			<img class="top-img" src="static/images/bonuses/star.png">
+			<div class="text-overlay">
+			</div>
+		</div>
+		<div class="top-value">
+			<img class="top-img" src="static/images/bonuses/star.png">
+			<div class="text-overlay">
+			</div>
+		</div>
 	</div>
 	<img id="settings-button" src="static/images/settings.png" alt="Settings" style="width: 50px; position: absolute; margin: 10px; right: 0;">
 
