--- a/server/htmls/index.html
+++ b/server/htmls/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>World Of Shapes</title>
-	<link rel="shortcut icon" type="image/x-icon" href="static/images/ico.ico" />
+    <link rel="shortcut icon" href="static/images/favicon.png" type="image/x-icon">
 	<link href="static/style.css" rel="stylesheet" type="text/css" />
 	<link href="static/libs/bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 </head>
