--- a/server/htmls/sign.html
+++ b/server/htmls/sign.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="static/libs/bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-    <title>Loginform</title>
+    <link rel="shortcut icon" href="static/images/favicon.png" type="image/x-icon">
+    <title>Аккаунт</title>
 </head>
 
 <body>
@@ -33,6 +34,25 @@
             background: linear-gradient(to right, rgba(132, 250, 176, 1), rgba(143, 211, 244, 1))
         }
     </style>
+    <script>
+// определяем на какой странице мы находимся
+let current_route = window.location.pathname; 
+let firstText = secondText = ApiRoute = '';
+if (current_route === '/signin') { // страница вход
+    firstText = 'Вход';
+    secondText = '<a href="/signup"class="fw-bold text-body"><u>Зарегистрироваться</u></a>';
+    ApiRoute = '/api/login';
+} else if (current_route === '/signup') { // страница регистрации
+    firstText = 'Создать аккаунт';
+    secondText = 'Уже есть аккаунт? <a href="/signin"class="fw-bold text-body"><u>Войти</u></a>';
+    ApiRoute = '/api/register';
+}
+window.onload = () => { 
+    // как только страница полностью загрузится заменим текст
+    document.querySelector("#firstText").innerHTML = firstText;
+    document.querySelector("#secondText").innerHTML = secondText;
+}
+    </script>
     <section class="vh-100 bg-image"
         style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');">
         <div class="mask d-flex align-items-center h-100 gradient-custom-3">
@@ -41,7 +61,7 @@
                     <div class="col-12 col-md-9 col-lg-7 col-xl-6">
                         <div class="card" style="border-radius: 15px;">
                             <div class="card-body p-5">
-                                <h2 class="text-uppercase text-center mb-5">Вход</h2>
+                                <h2 id="firstText" class="text-uppercase text-center mb-5"></h2>
 
                                 <div class="alert alert-danger mt-4" id="alerts" role="alert" style="display: none;">
 								</div>
@@ -50,7 +70,7 @@
 
                                     <div class="form-outline mb-4">
                                         <input type="text" id="nickname" name="nickname" class="form-control form-control-lg" />
-                                        <label class="form-label" for="nickname">Никнейм</label>
+                                        <label class="form-label" for="nickname">Логин</label>
                                     </div>
 
                                     <div class="form-outline mb-4">
@@ -62,8 +82,7 @@
                                             class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Подтвердить</button>
                                     </div>
 
-                                    <p class="text-center text-muted mt-5 mb-0"><a href="/signup"
-                                            class="fw-bold text-body"><u>Зарегистрироваться</u></a></p>
+                                    <p id="secondText" class="text-center text-muted mt-2 mb-0"></p>
                                 </form>
                             </div>
                         </div>
@@ -72,11 +91,12 @@
             </div>
         </div>
     </section>
+
     <script>
         let form = document.forms.signin;
         form.onsubmit = async (e) => {
             e.preventDefault();
-            let response = await fetch('/api/login', {
+            let response = await fetch(ApiRoute, {
                 method: 'POST',
                 body: JSON.stringify({
                     nickname: form.nickname.value,
@@ -95,8 +115,6 @@
                 localStorage.token = result.token;
                 window.location.href = '/'
             }
-
-
         };
     </script>
 </body>
